# avito-parser-server

./: README.md  pyproject.toml
src/: Dockerfile  docker-compose.yml  pyproject.toml
src/bot/: Dockerfile  main.py  router.py  server.py  settings.py
src/main/: database.py  local.env  methods.py  router.py  server.py  settings.py
src/server/: Dockerfile  pyproject.toml
src/server/main/: database.py  methods.py  models.py  router.py  server.py  settings.py
src/user/: models.py
